--- a/styles.css
+++ b/styles.css
@@ -353,7 +353,7 @@ nav ul li a:hover {
 
 /* Contact Section */
 .contact {
-    padding: 0rem 0 0rem;
+    padding: 0rem 0;
     background-color: var(--primary-color);
 }
 
