--- a/html/components/navbar.html
+++ b/html/components/navbar.html
@@ -1,9 +1,9 @@
 <header class="navbar">
     <div class="container">
         <div class="logo-container">
-            <img src="../../images/logo/Student-support.png" alt="Student Support Logo" class="navbar-logo">
-            <img src="../../images/logo/logo-umn-bg-white-09-grey.webp" alt="UMN Logo" class="navbar-logo">
-            <img src="../../images/logo/qs-unggul2-1-1.webp" alt="QS Unggul Logo" class="navbar-logo">
+            <img src="https://i.postimg.cc/hvPTCz7M/Student-support.png" alt="Student Support Logo" class="navbar-logo">
+            <img src="https://i.postimg.cc/Pp2MR1tn/logo-umn-bg-white-09-grey.webp" alt="UMN Logo" class="navbar-logo">
+            <img src="https://i.postimg.cc/WzX6j6PQ/qs-unggul2-1-1.webp" class="navbar-logo">
         </div>
         <button class="hamburger" aria-label="Toggle menu">
             <span class="bar"></span>
