--- a/html/components/footer-contact.html
+++ b/html/components/footer-contact.html
@@ -61,19 +61,19 @@
         </div>
         <div class="social-links" style="text-align: center; margin-bottom: 2rem;">
             <a href="https://www.facebook.com/UMN.Serpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                <img src="../../images/socialmedia/facebook.svg" alt="Facebook" style="width: 30px; height: 30px;">
+                <img src="https://i.postimg.cc/grGzy8Xk/facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
             </a>
             <a href="https://twitter.com/UMN_Serpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                <img src="../../images/socialmedia/twitter.svg" alt="Twitter" style="width: 30px; height: 30px;">
+                <img src="https://i.postimg.cc/rdC6zZ9G/twitter-154-svgrepo-com.png" alt="Twitter" style="width: 30px; height: 30px;">
             </a>
             <a href="https://www.instagram.com/umn_serpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                <img src="../../images/socialmedia/instagram.svg" alt="Instagram" style="width: 30px; height: 30px;">
+                <img src="https://i.postimg.cc/dZQJqcPT/instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
             </a>
             <a href="https://www.youtube.com/user/UMNSerpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                <img src="../../images/socialmedia/youtube.svg" alt="YouTube" style="width: 30px; height: 30px;">
+                <img src="https://i.postimg.cc/jL5RmT4p/youtube.png" alt="YouTube" style="width: 30px; height: 30px;">
             </a>
             <a href="https://www.linkedin.com/school/universitas-multimedia-nusantara/" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                <img src="../../images/socialmedia/linkedin.svg" alt="LinkedIn" style="width: 30px; height: 30px;">
+                <img src="https://i.postimg.cc/0rZ8VjDG/linkedin.png" alt="LinkedIn" style="width: 30px; height: 30px;">
             </a>
         </div>
 
