--- a/html/components/navbar-admin.html
+++ b/html/components/navbar-admin.html
@@ -1,4 +1,4 @@
-<header class="navbar-admin">
+<header class="navbarmin">
     <div class="container">
         <div class="logo-container">
             <img src="https://i.postimg.cc/hvPTCz7M/Student-support.png" alt="Student Support Logo" class="navbar-logo">
@@ -12,12 +12,11 @@
         </button>
         <nav class="nav-menu">
             <ul>
-                <li><a href="/index.html#home">Home</a></li>
-                <li><a href="/index.html#services">Layanan</a></li>
-                <li><a href="/index.html#booking">Pendaftaran Layanan</a></li>
-                <li><a href="/index.html#resources">Konselor</a></li>
-                <li><a href="/html/students/studentview.html">Status Pendaftaran</a></li>
-                <li><a href="/index.html#contact">Kontak</a></li>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../admin/admin.html">Daftar Permintaan</a></li>
+                <li><a href="../admin/DaftarRiwayat.html">Daftar Riwayat</a></li>
+                <li><a href="../admin/UpdateRiwayat.html">Update Riwayat Mahasiswa</a></li>
+                <li><a href="#" onclick="logout(event)">Logout</a></li>
             </ul>
         </nav>
     </div>
