--- a/css/navbar.css
+++ b/css/navbar.css
@@ -12,7 +12,28 @@
     height: 82px;
 }
 
+.navbarmin {
+    background-color: var(--secondary-color);
+    padding: 1rem 0;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    height: 82px;
+}
+
 .navbar .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 0 1rem;
+}
+.navbarmin .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
