--- a/html/components/navbar.html
+++ b/html/components/navbar.html
@@ -12,7 +12,7 @@
         </button>
         <nav class="nav-menu">
             <ul>
-                <li><a href="../../index.html#home">Home</a></li>
+                <li><a href="/index.html#home">Home</a></li>
                 <li><a href="/index.html#services">Layanan</a></li>
                 <li><a href="../index.html#booking">Pendaftaran Layanan</a></li>
                 <li><a href="../index.html#resources">Konselor</a></li>
