--- a/css/hero.css
+++ b/css/hero.css
@@ -9,7 +9,7 @@
     right: 50%;
     margin-left: -50vw;
     margin-right: -50vw;
-    margin-top: 82px;
+    /* Removed margin-top to eliminate gap */
     background-color: var(--primary-color);
     display: flex;
     justify-content: center;
