--- a/html/components/footer-contact.html
+++ b/html/components/footer-contact.html
@@ -11,7 +11,7 @@
 <body>
     <section id="contact" class="contact">
         <div style="text-align: center; margin-bottom: 2rem;">
-            <img src="https://i.postimg.cc/9Fsw-9N1L/umn.png" alt="UMN Logo" style="width: 150px; height: auto;">
+            <img src="https://i.postimg.cc/9Fsw9N1L/umn.png" alt="UMN Logo" style="width: 150px; height: auto;">
         </div>
         <div class="menu-links" style="text-align: center; margin-bottom: 2rem; display: grid; grid-template-columns: repeat(4, 1fr); gap: 2rem; max-width: 1200px; margin-left: auto; margin-right: auto; padding: 2rem; background: rgba(255, 255, 255, 0.05); border-radius: 10px;">
             <div style="display: flex; flex-direction: column; align-items: flex-start; gap: 1rem;">
@@ -61,19 +61,19 @@
         </div>
         <div class="social-links" style="text-align: center; margin-bottom: 2rem;">
             <a href="https://www.facebook.com/UMN.Serpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                <img src="https://i.postimg.cc/grGzy8Xk/facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
+                <img src="https://i.postimg.cc/VsCJ8FzM/facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
             </a>
             <a href="https://twitter.com/UMN_Serpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                <img src="https://i.postimg.cc/rdC6zZ9G/twitter-154-svgrepo-com.png" alt="Twitter" style="width: 30px; height: 30px;">
+                <img src="https://i.postimg.cc/1zbyCLnd/twitter-154-svgrepo-com.png" alt="Twitter" style="width: 30px; height: 30px;">
             </a>
             <a href="https://www.instagram.com/umn_serpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                <img src="https://i.postimg.cc/dZQJqcPT/instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
+                <img src="https://i.postimg.cc/brkr9qmL/instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
             </a>
             <a href="https://www.youtube.com/user/UMNSerpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                <img src="https://i.postimg.cc/jL5RmT4p/youtube.png" alt="YouTube" style="width: 30px; height: 30px;">
+                <img src="https://i.postimg.cc/jd6CWdwS/youtube.png" alt="YouTube" style="width: 30px; height: 30px;">
             </a>
             <a href="https://www.linkedin.com/school/universitas-multimedia-nusantara/" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                <img src="https://i.postimg.cc/0rZ8VjDG/linkedin.png" alt="LinkedIn" style="width: 30px; height: 30px;">
+                <img src="https://i.postimg.cc/TYvpYWPs/linkedin.png" alt="LinkedIn" style="width: 30px; height: 30px;">
             </a>
         </div>
 
