--- a/html/components/navbar-admin.html
+++ b/html/components/navbar-admin.html
@@ -3,7 +3,7 @@
         <div class="logo-container">
             <img src="https://i.postimg.cc/c1DSgZ5y/Student-Suppot-Logo.png" alt="Student Support Logo" class="navbar-logo">
             <img src="https://i.postimg.cc/9Fsw9N1L/umn.png" alt="UMN Logo" class="navbar-logo">
-            <img src="https://i.postimg.cc/WzX6j6PQ/qs-unggul2-1-1.webp" class="navbar-logo">
+            <img src="https://i.postimg.cc/WzX6j6PQ/qs-unggul2-1-1.webp" alt="unggul logo" class="navbar-logo">
         </div>
         <button class="hamburger" aria-label="Toggle menu">
             <span class="bar"></span>
