--- a/html/components/navbar-admin.html
+++ b/html/components/navbar-admin.html
@@ -1,7 +1,7 @@
 <header class="navbarmin">
     <div class="container">
         <div class="logo-container">
-            <img src="https://i.postimg.cc/c1DSgZ5y/Student-Suppot-Logo.png" alt="Student Support Logo" class="navbar-logo">
+            <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/rDkKRKxwtou3w?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQzOTQsImZpbGVTbHVnIjoickRrS1JLeHd0b3UzdyJ9.shbRoQtW1z8Zv67k96x3HSLjtLruIG5EC0sw8SXV7Lc" alt="Student Support Logo" class="navbar-logo">
             <img src="https://i.postimg.cc/9Fsw9N1L/umn.png" alt="UMN Logo" class="navbar-logo">
             <img src="https://i.postimg.cc/WzX6j6PQ/qs-unggul2-1-1.webp" alt="unggul logo" class="navbar-logo">
         </div>
