--- a/html/components/navbar.html
+++ b/html/components/navbar.html
@@ -1,9 +1,9 @@
 <header class="navbar">
     <div class="container">
         <div class="logo-container">
-            <img src="https://i.postimg.cc/c1DSgZ5y/Student-Suppot-Logo.png" alt="Student Support Logo" class="navbar-logo">
-            <img src="https://i.postimg.cc/9Fsw9N1L/umn.png" alt="UMN Logo" class="navbar-logo">
-            <img src="https://i.postimg.cc/WzX6j6PQ/qs-unggul2-1-1.webp"  alt="unggul logo" class="navbar-logo">
+            <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/rDkKRKxwtou3w?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQzOTQsImZpbGVTbHVnIjoickRrS1JLeHd0b3UzdyJ9.shbRoQtW1z8Zv67k96x3HSLjtLruIG5EC0sw8SXV7Lc" alt="Student Support Logo" class="navbar-logo">
+            <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/TJM1Fxjsf7bHO?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQ0NTEsImZpbGVTbHVnIjoiVEpNMUZ4anNmN2JITyJ9.yB0qWLJZc11xSxVmyOVSnuunmn76sqfY-5Sh7rXF78Y" alt="UMN Logo" class="navbar-logo">
+            <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/jYmNd2YnrqYXU?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQ0ODMsImZpbGVTbHVnIjoialltTmQyWW5ycVlYVSJ9.sz1DJZbKXZ6bLFeucZBkwbTMneo0-RrsqHawJ7iXTuc"  alt="unggul logo" class="navbar-logo">
         </div>
         <button class="hamburger" aria-label="Toggle menu">
             <span class="bar"></span>
