--- a/css/carousel.css
+++ b/css/carousel.css
@@ -21,26 +21,18 @@
 @media screen and (max-width: 1024px) {
     .slideshow-container {
         width: 100%;
-        height: auto;
-        max-height: 500px;
-    }
-
-    .carousel-item {
-        height: auto;
-    }
-
-    .carousel-item img {
-        height: auto;
-        max-height: 500px;
+        max-width: 1000px;
+        height: 500px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .slideshow-container {
-        max-height: 300px;
+        height: 300px;
     }
 
+    .carousel-item,
     .carousel-item img {
-        max-height: 300px;
+        height: 300px;
     }
 }
