--- a/css/carousel.css
+++ b/css/carousel.css
@@ -21,7 +21,16 @@
 @media screen and (max-width: 1024px) {
     .slideshow-container {
         width: 100%;
-        max-width: 1000px;
+        height: auto;
+        max-height: 500px;
+    }
+
+    .carousel-item {
+        height: auto;
+    }
+
+    .carousel-item img  {
+        height: auto;
         height: 500px;
     }
 }
@@ -31,7 +40,7 @@
         height: 300px;
     }
 
-    .carousel-item,
+  
     .carousel-item img {
         height: 300px;
     }
