--- a/html/components/footer-contact.html
+++ b/html/components/footer-contact.html
@@ -11,7 +11,7 @@
 <body>
     <section id="contact" class="contact">
         <div style="text-align: center; margin-bottom: 2rem;">
-            <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/TJM1Fxjsf7bHO?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQ2NTAsImZpbGVTbHVnIjoiVEpNMUZ4anNmN2JITyJ9.H5KZhzDK25e7P62TJEKlXdgruyOXoeQ7vtfPw4twGks" alt="UMN Logo" style="width: 150px; height: auto;">
+            <img src="https://github.com/BakiTacos/image-host/blob/main/StudKudeta/Logo%20UMN.png?raw=true" alt="UMN Logo" style="width: 150px; height: auto;">
         </div>
         <div class="menu-links" style="text-align: center; margin-bottom: 2rem; display: grid; grid-template-columns: repeat(4, 1fr); gap: 2rem; max-width: 1200px; margin-left: auto; margin-right: auto; padding: 2rem; background: rgba(255, 255, 255, 0.05); border-radius: 10px;">
             <div style="display: flex; flex-direction: column; align-items: flex-start; gap: 1rem;">
