--- a/html/components/navbar.html
+++ b/html/components/navbar.html
@@ -1,10 +1,10 @@
 <header class="navbar">
     <div class="container">
         <div class="logo-container">
-            <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/rDkKRKxwtou3w?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQzOTQsImZpbGVTbHVnIjoickRrS1JLeHd0b3UzdyJ9.shbRoQtW1z8Zv67k96x3HSLjtLruIG5EC0sw8SXV7Lc" alt="Student Support Logo" class="navbar-logo">
-            <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/TJM1Fxjsf7bHO?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQ0NTEsImZpbGVTbHVnIjoiVEpNMUZ4anNmN2JITyJ9.yB0qWLJZc11xSxVmyOVSnuunmn76sqfY-5Sh7rXF78Y" alt="UMN Logo" class="navbar-logo">
-            <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/jYmNd2YnrqYXU?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQ0ODMsImZpbGVTbHVnIjoialltTmQyWW5ycVlYVSJ9.sz1DJZbKXZ6bLFeucZBkwbTMneo0-RrsqHawJ7iXTuc"  alt="unggul logo" class="navbar-logo">
-        </div>
+                    <img src="https://github.com/BakiTacos/image-host/blob/main/StudKudeta/Student%20Suppot%20Logo.png?raw=true" alt="Student Support Logo" class="navbar-logo">
+                    <img src="https://github.com/BakiTacos/image-host/blob/main/StudKudeta/Logo%20UMN.png?raw=true" alt="UMN Logo" class="navbar-logo">
+                    <img src="https://raw.githubusercontent.com/BakiTacos/image-host/refs/heads/main/StudKudeta/Unggul.webp" alt="unggul logo" class="navbar-logo">
+                </div>
         <button class="hamburger" aria-label="Toggle menu">
             <span class="bar"></span>
             <span class="bar"></span>
