--- a/html/components/footer-contact.html
+++ b/html/components/footer-contact.html
@@ -61,19 +61,19 @@
         </div>
         <div class="social-links" style="text-align: center; margin-bottom: 2rem;">
             <a href="https://www.facebook.com/UMN.Serpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                <img src="https://i.postimg.cc/VsCJ8FzM/facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
+                <img src="https://raw.githubusercontent.com/BakiTacos/image-host/fe5474b344078fef62b2e6a7675f56e36796c66b/StudKudeta/facebook.svg" alt="Facebook" style="width: 30px; height: 30px;">
             </a>
             <a href="https://twitter.com/UMN_Serpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                <img src="https://i.postimg.cc/1zbyCLnd/twitter-154-svgrepo-com.png" alt="Twitter" style="width: 30px; height: 30px;">
+                <img src="https://raw.githubusercontent.com/BakiTacos/image-host/fe5474b344078fef62b2e6a7675f56e36796c66b/StudKudeta/twitter-1.svg" alt="Twitter" style="width: 30px; height: 30px;">
             </a>
             <a href="https://www.instagram.com/umn_serpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                <img src="https://i.postimg.cc/brkr9qmL/instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
+                <img src="https://raw.githubusercontent.com/BakiTacos/image-host/fe5474b344078fef62b2e6a7675f56e36796c66b/StudKudeta/instagram.svg" alt="Instagram" style="width: 30px; height: 30px;">
             </a>
             <a href="https://www.youtube.com/user/UMNSerpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                <img src="https://i.postimg.cc/jd6CWdwS/youtube.png" alt="YouTube" style="width: 30px; height: 30px;">
+                <img src="https://raw.githubusercontent.com/BakiTacos/image-host/fe5474b344078fef62b2e6a7675f56e36796c66b/StudKudeta/youtube.svg" alt="YouTube" style="width: 30px; height: 30px;">
             </a>
             <a href="https://www.linkedin.com/school/universitas-multimedia-nusantara/" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                <img src="https://i.postimg.cc/TYvpYWPs/linkedin.png" alt="LinkedIn" style="width: 30px; height: 30px;">
+                <img src="https://raw.githubusercontent.com/BakiTacos/image-host/fe5474b344078fef62b2e6a7675f56e36796c66b/StudKudeta/linkedin.svg" alt="LinkedIn" style="width: 30px; height: 30px;">
             </a>
         </div>
 
