--- a/css/carousel.css
+++ b/css/carousel.css
@@ -21,27 +21,40 @@
 @media screen and (max-width: 1024px) {
     .slideshow-container {
         width: 100%;
-        height: auto;
-        max-height: 500px;
+        height: 400px;
     }
 
     .carousel-item {
-        height: auto;
+        width: 100%;
+        height: 100%;
     }
 
-    .carousel-item img  {
-        height: auto;
-        height: 500px;
+    .carousel-item img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 }
 
 @media screen and (max-width: 768px) {
     .slideshow-container {
-        height: 300px;
+        height: 250px;
     }
 
-  
+    .carousel-item {
+        width: 100%;
+        height: 100%;
+    }
+
     .carousel-item img {
-        height: 300px;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .slideshow-container {
+        height: 200px;
     }
 }
