--- a/css/carousel.css
+++ b/css/carousel.css
@@ -34,26 +34,29 @@
         width: 100%;
         height: 100%;
         object-fit: contain;
-        max-height: 50vh;
+        max-height: 45vh;
     }
 }
 
 @media screen and (max-width: 768px) {
     .slideshow-container {
-        aspect-ratio: 3/2;
+        aspect-ratio: 20/9;
     }
 
     .carousel-item img {
-        max-height: 40vh;
+        max-height: 35vh;
     }
 }
 
 @media screen and (max-width: 480px) {
     .slideshow-container {
-        aspect-ratio: 4/3;
+        aspect-ratio: 20/9;
+        max-height: 80vh;
     }
 
     .carousel-item img {
-        max-height: 30vh;
+        max-height: 25vh;
+        object-fit: contain;
+        margin: 0 auto;
     }
 }
