--- a/css/carousel.css
+++ b/css/carousel.css
@@ -23,11 +23,13 @@
         width: 100%;
         height: auto;
         aspect-ratio: 16/9;
+        min-height: 300px;
     }
 
     .carousel-item {
         width: 100%;
         height: 100%;
+        min-height: 300px;
     }
 
     .carousel-item img {
@@ -35,28 +37,54 @@
         height: 100%;
         object-fit: contain;
         max-height: 45vh;
+        min-height: 300px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .slideshow-container {
         aspect-ratio: 20/9;
+        min-height: 250px;
+    }
+
+    .carousel-item {
+        min-height: 250px;
     }
 
     .carousel-item img {
         max-height: 35vh;
+        min-height: 250px;
     }
 }
 
 @media screen and (max-width: 480px) {
     .slideshow-container {
         aspect-ratio: 20/9;
-        max-height: 80vh;
+        min-height: 200px;
+        max-height: 300px;
+    }
+
+    .carousel-item {
+        min-height: 200px;
     }
 
     .carousel-item img {
-        max-height: 25vh;
+        min-height: 200px;
+        max-height: 300px;
         object-fit: contain;
         margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .slideshow-container {
+        min-height: 180px;
+        max-height: 250px;
+    }
+
+    .carousel-item,
+    .carousel-item img {
+        min-height: 180px;
+        max-height: 250px;
     }
 }
